interpreter.output
Терминалы не используются в грамматике

   END
   ER


Состояние 4 конфликты: 15 сдвига/вывода, 33 вывода/вывода
Состояние 36 конфликты: 32 сдвига/вывода
Состояние 66 конфликты: 5 сдвига/вывода
Состояние 67 конфликты: 4 сдвига/вывода, 11 вывода/вывода
Состояние 68 конфликты: 6 сдвига/вывода, 22 вывода/вывода
Состояние 82 конфликты: 1 сдвига/вывода
Состояние 83 конфликты: 1 сдвига/вывода
Состояние 84 конфликты: 15 сдвига/вывода
Состояние 96 конфликты: 15 сдвига/вывода
Состояние 129 конфликты: 1 сдвига/вывода
Состояние 133 конфликты: 1 сдвига/вывода
Состояние 157 конфликты: 6 сдвига/вывода
Состояние 168 конфликты: 3 сдвига/вывода
Состояние 169 конфликты: 6 сдвига/вывода, 12 вывода/вывода
Состояние 182 конфликты: 5 сдвига/вывода
Состояние 183 конфликты: 4 сдвига/вывода
Состояние 185 конфликты: 4 сдвига/вывода
Состояние 186 конфликты: 3 сдвига/вывода
Состояние 188 конфликты: 6 сдвига/вывода
Состояние 189 конфликты: 1 сдвига/вывода
Состояние 190 конфликты: 1 сдвига/вывода
Состояние 191 конфликты: 1 сдвига/вывода
Состояние 192 конфликты: 1 сдвига/вывода
Состояние 193 конфликты: 1 сдвига/вывода
Состояние 209 конфликты: 4 вывода/вывода


Грамматика

    0 $accept: program $end

    1 program: func

    2 func: func stmts
    3     | func error
    4     | %empty

    5 stmts: stmt
    6      | stmts stmt
    7      | stmts error
    8      | error

    9 stmt: NEWLINE
   10     | expr NEWLINE
   11     | vector NEWLINE
   12     | matrix NEWLINE
   13     | print NEWLINE
   14     | vmdeclaration NEWLINE
   15     | declaration NEWLINE
   16     | assignment NEWLINE
   17     | iff NEWLINE
   18     | forr NEWLINE
   19     | function NEWLINE
   20     | callfunction NEWLINE
   21     | robotactions NEWLINE
   22     | '(' stmts ')'
   23     | error NEWLINE

   24 robotactions: robotright
   25             | robotleft

   26 robotmove: MOVE '(' expr ')'

   27 robotright: RIGHT

   28 robotleft: LEFT

   29 robotwall: WALL

   30 robotexit: ROBEX

   31 iff: IF expr NEWLINE begif stmts endif

   32 begif: B
   33      | BEGIF

   34 endif: E
   35      | ENDIF

   36 begfor: B
   37       | BEGFOR

   38 endfor: E
   39       | ENDFOR

   40 forr: FORR declaration DOUBLEDOT expr NEWLINE begfor stmts endfor

   41 return_func: type VAR
   42            | return_func ',' type VAR
   43            | return_func error

   44 args_func: '[' type VAR
   45          | '[' type VAR DECLARE expr
   46          | '[' type VAR DECLARE vector
   47          | '[' type VAR DECLARE matrix
   48          | args_func ',' type VAR
   49          | args_func ',' type VAR DECLARE expr
   50          | args_func ',' type VAR DECLARE vector
   51          | args_func ',' type VAR DECLARE matrix
   52          | args_func ']'
   53          | args_func error
   54          | error

   55 function_head: '[' return_func ']' DECLARE FUNC VAR '(' args_func ')'
   56              | error

   57 function: function_head B NEWLINE stmts E

   58 callfunc_args: expr
   59              | vector
   60              | matrix
   61              | DFLT
   62              | callfunc_args ',' expr
   63              | callfunc_args ',' vector
   64              | callfunc_args ',' matrix
   65              | callfunc_args ',' DFLT
   66              | callfunc_args error
   67              | error

   68 callfunction: return_func DECLARE FVARIABLE '[' callfunc_args ']'
   69             | error '[' callfunc_args ']'

   70 matrix: '{' listexprs '}'
   71       | MVARIABLE '(' vector ',' '[' ']' ')'
   72       | MVARIABLE '(' '[' ']' ',' vector ')'
   73       | MVARIABLE '(' matrix ')'
   74       | MVARIABLE
   75       | matrix '*' matrix
   76       | matrix ELEMMULT matrix
   77       | matrix '\''
   78       | matrix RIGHTSHIFT
   79       | matrix LEFTSHIFT
   80       | vector '\''
   81       | matrix ELEMMULT vector
   82       | matrix ELEMMULT expr
   83       | error matrix
   84       | error vector
   85       | error expr

   86 listexprs: vector ',' vector
   87          | listexprs ',' vector
   88          | listexprs error

   89 vector: '{' exprs '}'
   90       | VVARIABLE '(' vector ',' '[' ']' ')'
   91       | MVARIABLE '(' expr ',' '[' ']' ')'
   92       | MVARIABLE '(' '[' ']' ',' expr ')'
   93       | VVARIABLE
   94       | vector ELEMMULT vector
   95       | vector RIGHTSHIFT
   96       | vector LEFTSHIFT
   97       | vector ELEMMULT expr
   98       | error vector
   99       | error expr

  100 exprs: expr ',' expr
  101      | exprs ',' expr
  102      | exprs error

  103 vmdeclaration: VVARIABLE '(' expr ')' ASSIGN expr
  104              | VVARIABLE '(' vector ',' '[' ']' ')' ASSIGN vector
  105              | MVARIABLE '(' expr ',' expr ')' ASSIGN expr
  106              | MVARIABLE '(' expr ',' '[' ']' ')' ASSIGN vector
  107              | MVARIABLE '(' '[' ']' ',' expr ')' ASSIGN vector
  108              | MVARIABLE '(' vector ',' '[' ']' ')' ASSIGN matrix
  109              | MVARIABLE '(' '[' ']' ',' vector ')' ASSIGN matrix
  110              | MVARIABLE '(' matrix ')' ASSIGN matrix

  111 declaration: type VAR DECLARE expr
  112            | type VAR DECLARE vector
  113            | type VAR DECLARE matrix

  114 assignment: VARIABLE ASSIGN expr
  115           | VVARIABLE ASSIGN vector
  116           | MVARIABLE ASSIGN matrix

  117 print: PRINT '(' expr ')'
  118      | PRINT '(' VVARIABLE ')'
  119      | PRINT '(' MVARIABLE ')'

  120 expr: const
  121     | robotexit
  122     | robotmove
  123     | robotwall
  124     | VARIABLE
  125     | '-' expr
  126     | expr '+' expr
  127     | expr '-' expr
  128     | expr '/' expr
  129     | expr '<' expr
  130     | expr '>' expr
  131     | '!' expr
  132     | expr CONJUNCTION expr
  133     | '(' expr ')'
  134     | VVARIABLE '(' expr ')'
  135     | MVARIABLE '(' expr ',' expr ')'
  136     | error expr

  137 type: INT
  138     | CINT
  139     | VINT
  140     | MINT
  141     | CVINT
  142     | CMINT
  143     | BOOLEAN
  144     | CBOOLEAN
  145     | VBOOLEAN
  146     | MBOOLEAN
  147     | CVBOOLEAN
  148     | CMBOOLEAN

  149 const: INTEGER
  150      | BOOL


Терминальные символы с правилами, в которых они появляются

$end (0) 0
'!' (33) 131
'\'' (39) 77 80
'(' (40) 22 26 55 71 72 73 90 91 92 103 104 105 106 107 108 109 110
    117 118 119 133 134 135
')' (41) 22 26 55 71 72 73 90 91 92 103 104 105 106 107 108 109 110
    117 118 119 133 134 135
'*' (42) 75
'+' (43) 126
',' (44) 42 48 49 50 51 62 63 64 65 71 72 86 87 90 91 92 100 101 104
    105 106 107 108 109 135
'-' (45) 125 127
'/' (47) 128
'<' (60) 129
'>' (62) 130
'[' (91) 44 45 46 47 55 68 69 71 72 90 91 92 104 106 107 108 109
']' (93) 52 55 68 69 71 72 90 91 92 104 106 107 108 109
'{' (123) 70 89
'}' (125) 70 89
error (256) 3 7 8 23 43 53 54 56 66 67 69 83 84 85 88 98 99 102 136
END (258)
BOOL <boolPtr> (259) 150
INTEGER <intPtr> (260) 149
VARIABLE <varName> (261) 114 124
VVARIABLE <varName> (262) 90 93 103 104 115 118 134
MVARIABLE <varName> (263) 71 72 73 74 91 92 105 106 107 108 109 110
    116 119 135
VAR <varName> (264) 41 42 44 45 46 47 48 49 50 51 55 111 112 113
FVARIABLE <varName> (265) 68
CINT <vtype> (266) 138
VINT <vtype> (267) 139
MINT <vtype> (268) 140
INT <vtype> (269) 137
CVINT <vtype> (270) 141
CMINT <vtype> (271) 142
BOOLEAN <vtype> (272) 143
CBOOLEAN <vtype> (273) 144
VBOOLEAN <vtype> (274) 145
MBOOLEAN <vtype> (275) 146
CVBOOLEAN <vtype> (276) 147
CMBOOLEAN <vtype> (277) 148
NEWLINE (278) 9 10 11 12 13 14 15 16 17 18 19 20 21 23 31 40 57
PRINT (279) 117 118 119
CONJUNCTION (280) 132
ELEMMULT (281) 76 81 82 94 97
LEFTSHIFT (282) 79 96
RIGHTSHIFT (283) 78 95
IF (284) 31
FORR (285) 40
ER (286)
DOUBLEDOT (287) 40
B (288) 32 36 57
E (289) 34 38 57
FUNC (290) 55
MOVE (291) 26
RIGHT (292) 27
LEFT (293) 28
ROBEX (294) 30
WALL (295) 29
BEGFOR (296) 37
BEGIF (297) 33
ENDIF (298) 35
ENDFOR (299) 39
DFLT (300) 61 65
ASSIGN (301) 103 104 105 106 107 108 109 110 114 115 116
DECLARE (302) 45 46 47 49 50 51 55 68 111 112 113
UMINUS (303)


Нетерминальные символы с правилами, в которых они появляются

$accept (64)
    налево: 0
program (65)
    налево: 1, направо: 0
func (66)
    налево: 2 3 4, направо: 1 2 3
stmts <ptr> (67)
    налево: 5 6 7 8, направо: 2 6 7 22 31 40 57
stmt <ptr> (68)
    налево: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23, направо:
    5 6
robotactions <ptr> (69)
    налево: 24 25, направо: 21
robotmove <ptr> (70)
    налево: 26, направо: 122
robotright <ptr> (71)
    налево: 27, направо: 24
robotleft <ptr> (72)
    налево: 28, направо: 25
robotwall <ptr> (73)
    налево: 29, направо: 123
robotexit <ptr> (74)
    налево: 30, направо: 121
iff <ptr> (75)
    налево: 31, направо: 17
begif (76)
    налево: 32 33, направо: 31
endif (77)
    налево: 34 35, направо: 31
begfor (78)
    налево: 36 37, направо: 40
endfor (79)
    налево: 38 39, направо: 40
forr <ptr> (80)
    налево: 40, направо: 18
return_func <ptr> (81)
    налево: 41 42 43, направо: 42 43 55 68
args_func <ptr> (82)
    налево: 44 45 46 47 48 49 50 51 52 53 54, направо:
    48 49 50 51 52 53 55
function_head <ptr> (83)
    налево: 55 56, направо: 57
function <ptr> (84)
    налево: 57, направо: 19
callfunc_args <ptr> (85)
    налево: 58 59 60 61 62 63 64 65 66 67, направо: 62
    63 64 65 66 68 69
callfunction <ptr> (86)
    налево: 68 69, направо: 20
matrix <ptr> (87)
    налево: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85,
    направо: 12 47 51 60 64 73 75 76 77 78 79 81 82 83 108 109
    110 113 116
listexprs <ptr> (88)
    налево: 86 87 88, направо: 70 87 88
vector <ptr> (89)
    налево: 89 90 91 92 93 94 95 96 97 98 99, направо:
    11 46 50 59 63 71 72 80 81 84 86 87 90 94 95 96 97 98 104 106 107
    108 109 112 115
exprs <ptr> (90)
    налево: 100 101 102, направо: 89 101 102
vmdeclaration <ptr> (91)
    налево: 103 104 105 106 107 108 109 110, направо:
    14
declaration <varOpPtr> (92)
    налево: 111 112 113, направо: 15 40
assignment <varOpPtr> (93)
    налево: 114 115 116, направо: 16
print <ptr> (94)
    налево: 117 118 119, направо: 13
expr <ptr> (95)
    налево: 120 121 122 123 124 125 126 127 128 129 130 131 132
    133 134 135 136, направо: 10 26 31 40 45 49 58 62 82 85
    91 92 97 99 100 101 103 105 106 107 111 114 117 125 126 127 128
    129 130 131 132 133 134 135 136
type <vtype> (96)
    налево: 137 138 139 140 141 142 143 144 145 146 147 148,
    направо: 41 42 44 45 46 47 48 49 50 51 111 112 113
const <ptr> (97)
    налево: 149 150, направо: 120


State 0

    0 $accept: . program $end
    1 program: . func
    2 func: . func stmts
    3     | . func error
    4     | . %empty

    $default  вывод с использованием правила 4 (func)

    program  переход в состояние 1
    func     переход в состояние 2


State 1

    0 $accept: program . $end

    $end  сдвиг, и переход в состояние 3


State 2

    1 program: func .  [$end]
    2 func: func . stmts
    3     | func . error
    5 stmts: . stmt
    6      | . stmts stmt
    7      | . stmts error
    8      | . error
    9 stmt: . NEWLINE
   10     | . expr NEWLINE
   11     | . vector NEWLINE
   12     | . matrix NEWLINE
   13     | . print NEWLINE
   14     | . vmdeclaration NEWLINE
   15     | . declaration NEWLINE
   16     | . assignment NEWLINE
   17     | . iff NEWLINE
   18     | . forr NEWLINE
   19     | . function NEWLINE
   20     | . callfunction NEWLINE
   21     | . robotactions NEWLINE
   22     | . '(' stmts ')'
   23     | . error NEWLINE
   24 robotactions: . robotright
   25             | . robotleft
   26 robotmove: . MOVE '(' expr ')'
   27 robotright: . RIGHT
   28 robotleft: . LEFT
   29 robotwall: . WALL
   30 robotexit: . ROBEX
   31 iff: . IF expr NEWLINE begif stmts endif
   40 forr: . FORR declaration DOUBLEDOT expr NEWLINE begfor stmts endfor
   41 return_func: . type VAR
   42            | . return_func ',' type VAR
   43            | . return_func error
   55 function_head: . '[' return_func ']' DECLARE FUNC VAR '(' args_func ')'
   56              | . error
   57 function: . function_head B NEWLINE stmts E
   68 callfunction: . return_func DECLARE FVARIABLE '[' callfunc_args ']'
   69             | . error '[' callfunc_args ']'
   70 matrix: . '{' listexprs '}'
   71       | . MVARIABLE '(' vector ',' '[' ']' ')'
   72       | . MVARIABLE '(' '[' ']' ',' vector ')'
   73       | . MVARIABLE '(' matrix ')'
   74       | . MVARIABLE
   75       | . matrix '*' matrix
   76       | . matrix ELEMMULT matrix
   77       | . matrix '\''
   78       | . matrix RIGHTSHIFT
   79       | . matrix LEFTSHIFT
   80       | . vector '\''
   81       | . matrix ELEMMULT vector
   82       | . matrix ELEMMULT expr
   83       | . error matrix
   84       | . error vector
   85       | . error expr
   89 vector: . '{' exprs '}'
   90       | . VVARIABLE '(' vector ',' '[' ']' ')'
   91       | . MVARIABLE '(' expr ',' '[' ']' ')'
   92       | . MVARIABLE '(' '[' ']' ',' expr ')'
   93       | . VVARIABLE
   94       | . vector ELEMMULT vector
   95       | . vector RIGHTSHIFT
   96       | . vector LEFTSHIFT
   97       | . vector ELEMMULT expr
   98       | . error vector
   99       | . error expr
  103 vmdeclaration: . VVARIABLE '(' expr ')' ASSIGN expr
  104              | . VVARIABLE '(' vector ',' '[' ']' ')' ASSIGN vector
  105              | . MVARIABLE '(' expr ',' expr ')' ASSIGN expr
  106              | . MVARIABLE '(' expr ',' '[' ']' ')' ASSIGN vector
  107              | . MVARIABLE '(' '[' ']' ',' expr ')' ASSIGN vector
  108              | . MVARIABLE '(' vector ',' '[' ']' ')' ASSIGN matrix
  109              | . MVARIABLE '(' '[' ']' ',' vector ')' ASSIGN matrix
  110              | . MVARIABLE '(' matrix ')' ASSIGN matrix
  111 declaration: . type VAR DECLARE expr
  112            | . type VAR DECLARE vector
  113            | . type VAR DECLARE matrix
  114 assignment: . VARIABLE ASSIGN expr
  115           | . VVARIABLE ASSIGN vector
  116           | . MVARIABLE ASSIGN matrix
  117 print: . PRINT '(' expr ')'
  118      | . PRINT '(' VVARIABLE ')'
  119      | . PRINT '(' MVARIABLE ')'
  120 expr: . const
  121     | . robotexit
  122     | . robotmove
  123     | . robotwall
  124     | . VARIABLE
  125     | . '-' expr
  126     | . expr '+' expr
  127     | . expr '-' expr
  128     | . expr '/' expr
  129     | . expr '<' expr
  130     | . expr '>' expr
  131     | . '!' expr
  132     | . expr CONJUNCTION expr
  133     | . '(' expr ')'
  134     | . VVARIABLE '(' expr ')'
  135     | . MVARIABLE '(' expr ',' expr ')'
  136     | . error expr
  137 type: . INT
  138     | . CINT
  139     | . VINT
  140     | . MINT
  141     | . CVINT
  142     | . CMINT
  143     | . BOOLEAN
  144     | . CBOOLEAN
  145     | . VBOOLEAN
  146     | . MBOOLEAN
  147     | . CVBOOLEAN
  148     | . CMBOOLEAN
  149 const: . INTEGER
  150      | . BOOL

    error      сдвиг, и переход в состояние 4
    BOOL       сдвиг, и переход в состояние 5
    INTEGER    сдвиг, и переход в состояние 6
    VARIABLE   сдвиг, и переход в состояние 7
    VVARIABLE  сдвиг, и переход в состояние 8
    MVARIABLE  сдвиг, и переход в состояние 9
    CINT       сдвиг, и переход в состояние 10
    VINT       сдвиг, и переход в состояние 11
    MINT       сдвиг, и переход в состояние 12
    INT        сдвиг, и переход в состояние 13
    CVINT      сдвиг, и переход в состояние 14
    CMINT      сдвиг, и переход в состояние 15
    BOOLEAN    сдвиг, и переход в состояние 16
    CBOOLEAN   сдвиг, и переход в состояние 17
    VBOOLEAN   сдвиг, и переход в состояние 18
    MBOOLEAN   сдвиг, и переход в состояние 19
    CVBOOLEAN  сдвиг, и переход в состояние 20
    CMBOOLEAN  сдвиг, и переход в состояние 21
    NEWLINE    сдвиг, и переход в состояние 22
    PRINT      сдвиг, и переход в состояние 23
    IF         сдвиг, и переход в состояние 24
    FORR       сдвиг, и переход в состояние 25
    MOVE       сдвиг, и переход в состояние 26
    RIGHT      сдвиг, и переход в состояние 27
    LEFT       сдвиг, и переход в состояние 28
    ROBEX      сдвиг, и переход в состояние 29
    WALL       сдвиг, и переход в состояние 30
    '-'        сдвиг, и переход в состояние 31
    '!'        сдвиг, и переход в состояние 32
    '('        сдвиг, и переход в состояние 33
    '['        сдвиг, и переход в состояние 34
    '{'        сдвиг, и переход в состояние 35

    $end  вывод с использованием правила 1 (program)

    stmts          переход в состояние 36
    stmt           переход в состояние 37
    robotactions   переход в состояние 38
    robotmove      переход в состояние 39
    robotright     переход в состояние 40
    robotleft      переход в состояние 41
    robotwall      переход в состояние 42
    robotexit      переход в состояние 43
    iff            переход в состояние 44
    forr           переход в состояние 45
    return_func    переход в состояние 46
    function_head  переход в состояние 47
    function       переход в состояние 48
    callfunction   переход в состояние 49
    matrix         переход в состояние 50
    vector         переход в состояние 51
    vmdeclaration  переход в состояние 52
    declaration    переход в состояние 53
    assignment     переход в состояние 54
    print          переход в состояние 55
    expr           переход в состояние 56
    type           переход в состояние 57
    const          переход в состояние 58


State 3

    0 $accept: program $end .

    $default  принять


State 4

    3 func: func error .  [$end, error, BOOL, INTEGER, VARIABLE, VVARIABLE, MVARIABLE, CINT, VINT, MINT, INT, CVINT, CMINT, BOOLEAN, CBOOLEAN, VBOOLEAN, MBOOLEAN, CVBOOLEAN, CMBOOLEAN, NEWLINE, PRINT, IF, FORR, MOVE, RIGHT, LEFT, ROBEX, WALL, '-', '!', '(', '[', '{']
    8 stmts: error .  [$end, error, BOOL, INTEGER, VARIABLE, VVARIABLE, MVARIABLE, CINT, VINT, MINT, INT, CVINT, CMINT, BOOLEAN, CBOOLEAN, VBOOLEAN, MBOOLEAN, CVBOOLEAN, CMBOOLEAN, NEWLINE, PRINT, IF, FORR, MOVE, RIGHT, LEFT, ROBEX, WALL, '-', '!', '(', '[', '{']
   23 stmt: error . NEWLINE
   26 robotmove: . MOVE '(' expr ')'
   29 robotwall: . WALL
   30 robotexit: . ROBEX
   56 function_head: error .  [B]
   69 callfunction: error . '[' callfunc_args ']'
   70 matrix: . '{' listexprs '}'
   71       | . MVARIABLE '(' vector ',' '[' ']' ')'
   72       | . MVARIABLE '(' '[' ']' ',' vector ')'
   73       | . MVARIABLE '(' matrix ')'
   74       | . MVARIABLE
   75       | . matrix '*' matrix
   76       | . matrix ELEMMULT matrix
   77       | . matrix '\''
   78       | . matrix RIGHTSHIFT
   79       | . matrix LEFTSHIFT
   80       | . vector '\''
   81       | . matrix ELEMMULT vector
   82       | . matrix ELEMMULT expr
   83       | . error matrix
   83       | error . matrix
   84       | . error vector
   84       | error . vector
   85       | . error expr
   85       | error . expr
   89 vector: . '{' exprs '}'
   90       | . VVARIABLE '(' vector ',' '[' ']' ')'
   91       | . MVARIABLE '(' expr ',' '[' ']' ')'
   92       | . MVARIABLE '(' '[' ']' ',' expr ')'
   93       | . VVARIABLE
   94       | . vector ELEMMULT vector
   95       | . vector RIGHTSHIFT
   96       | . vector LEFTSHIFT
   97       | . vector ELEMMULT expr
   98       | . error vector
   98       | error . vector
   99       | . error expr
   99       | error . expr
  120 expr: . const
  121     | . robotexit
  122     | . robotmove
  123     | . robotwall
  124     | . VARIABLE
  125     | . '-' expr
  126     | . expr '+' expr
  127     | . expr '-' expr
  128     | . expr '/' expr
  129     | . expr '<' expr
  130     | . expr '>' expr
  131     | . '!' expr
  132     | . expr CONJUNCTION expr
  133     | . '(' expr ')'
  134     | . VVARIABLE '(' expr ')'
  135     | . MVARIABLE '(' expr ',' expr ')'
  136     | . error expr
  136     | error . expr
  149 const: . INTEGER
  150      | . BOOL

    error      сдвиг, и переход в состояние 59
    BOOL       сдвиг, и переход в состояние 5
    INTEGER    сдвиг, и переход в состояние 6
    VARIABLE   сдвиг, и переход в состояние 60
    VVARIABLE  сдвиг, и переход в состояние 61
    MVARIABLE  сдвиг, и переход в состояние 62
    NEWLINE    сдвиг, и переход в состояние 63
    MOVE       сдвиг, и переход в состояние 26
    ROBEX      сдвиг, и переход в состояние 29
    WALL       сдвиг, и переход в состояние 30
    '-'        сдвиг, и переход в состояние 31
    '!'        сдвиг, и переход в состояние 32
    '('        сдвиг, и переход в состояние 64
    '['        сдвиг, и переход в состояние 65
    '{'        сдвиг, и переход в состояние 35

    $end       вывод с использованием правила 3 (func)
    $end       [вывод с использованием правила 8 (stmts)]
    error      [вывод с использованием правила 3 (func)]
    error      [вывод с использованием правила 8 (stmts)]
    BOOL       [вывод с использованием правила 3 (func)]
    BOOL       [вывод с использованием правила 8 (stmts)]
    INTEGER    [вывод с использованием правила 3 (func)]
    INTEGER    [вывод с использованием правила 8 (stmts)]
    VARIABLE   [вывод с использованием правила 3 (func)]
    VARIABLE   [вывод с использованием правила 8 (stmts)]
    VVARIABLE  [вывод с использованием правила 3 (func)]
    VVARIABLE  [вывод с использованием правила 8 (stmts)]
    MVARIABLE  [вывод с использованием правила 3 (func)]
    MVARIABLE  [вывод с использованием правила 8 (stmts)]
    CINT       вывод с использованием правила 3 (func)
    CINT       [вывод с использованием правила 8 (stmts)]
    VINT       вывод с использованием правила 3 (func)
    VINT       [вывод с использованием правила 8 (stmts)]
    MINT       вывод с использованием правила 3 (func)
    MINT       [вывод с использованием правила 8 (stmts)]
    INT        вывод с использованием правила 3 (func)
    INT        [вывод с использованием правила 8 (stmts)]
    CVINT      вывод с использованием правила 3 (func)
    CVINT      [вывод с использованием правила 8 (stmts)]
    CMINT      вывод с использованием правила 3 (func)
    CMINT      [вывод с использованием правила 8 (stmts)]
    BOOLEAN    вывод с использованием правила 3 (func)
    BOOLEAN    [вывод с использованием правила 8 (stmts)]
    CBOOLEAN   вывод с использованием правила 3 (func)
    CBOOLEAN   [вывод с использованием правила 8 (stmts)]
    VBOOLEAN   вывод с использованием правила 3 (func)
    VBOOLEAN   [вывод с использованием правила 8 (stmts)]
    MBOOLEAN   вывод с использованием правила 3 (func)
    MBOOLEAN   [вывод с использованием правила 8 (stmts)]
    CVBOOLEAN  вывод с использованием правила 3 (func)
    CVBOOLEAN  [вывод с использованием правила 8 (stmts)]
    CMBOOLEAN  вывод с использованием правила 3 (func)
    CMBOOLEAN  [вывод с использованием правила 8 (stmts)]
    NEWLINE    [вывод с использованием правила 3 (func)]
    NEWLINE    [вывод с использованием правила 8 (stmts)]
    PRINT      вывод с использованием правила 3 (func)
    PRINT      [вывод с использованием правила 8 (stmts)]
    IF         вывод с использованием правила 3 (func)
    IF         [вывод с использованием правила 8 (stmts)]
    FORR       вывод с использованием правила 3 (func)
    FORR       [вывод с использованием правила 8 (stmts)]
    B          вывод с использованием правила 56 (function_head)
    MOVE       [вывод с использованием правила 3 (func)]
    MOVE       [вывод с использованием правила 8 (stmts)]
    RIGHT      вывод с использованием правила 3 (func)
    RIGHT      [вывод с использованием правила 8 (stmts)]
    LEFT       вывод с использованием правила 3 (func)
    LEFT       [вывод с использованием правила 8 (stmts)]
    ROBEX      [вывод с использованием правила 3 (func)]
    ROBEX      [вывод с использованием правила 8 (stmts)]
    WALL       [вывод с использованием правила 3 (func)]
    WALL       [вывод с использованием правила 8 (stmts)]
    '-'        [вывод с использованием правила 3 (func)]
    '-'        [вывод с использованием правила 8 (stmts)]
    '!'        [вывод с использованием правила 3 (func)]
    '!'        [вывод с использованием правила 8 (stmts)]
    '('        [вывод с использованием правила 3 (func)]
    '('        [вывод с использованием правила 8 (stmts)]
    '['        [вывод с использованием правила 3 (func)]
    '['        [вывод с использованием правила 8 (stmts)]
    '{'        [вывод с использованием правила 3 (func)]
    '{'        [вывод с использованием правила 8 (stmts)]

    robotmove  переход в состояние 39
    robotwall  переход в состояние 42
    robotexit  переход в состояние 43
    matrix     переход в состояние 66
    vector     переход в состояние 67
    expr       переход в состояние 68
    const      переход в состояние 58


State 5

  150 const: BOOL .

    $default  вывод с использованием правила 150 (const)


State 6

  149 const: INTEGER .

    $default  вывод с использованием правила 149 (const)


State 7

  114 assignment: VARIABLE . ASSIGN expr
  124 expr: VARIABLE .  [NEWLINE, CONJUNCTION, '<', '>', '+', '-', '/', ')']

    ASSIGN  сдвиг, и переход в состояние 69

    $default  вывод с использованием правила 124 (expr)


State 8

   90 vector: VVARIABLE . '(' vector ',' '[' ']' ')'
   93       | VVARIABLE .  [NEWLINE, ELEMMULT, '\'', LEFTSHIFT, RIGHTSHIFT]
  103 vmdeclaration: VVARIABLE . '(' expr ')' ASSIGN expr
  104              | VVARIABLE . '(' vector ',' '[' ']' ')' ASSIGN vector
  115 assignment: VVARIABLE . ASSIGN vector
  134 expr: VVARIABLE . '(' expr ')'

    ASSIGN  сдвиг, и переход в состояние 70
    '('     сдвиг, и переход в состояние 71

    $default  вывод с использованием правила 93 (vector)


State 9

   71 matrix: MVARIABLE . '(' vector ',' '[' ']' ')'
   72       | MVARIABLE . '(' '[' ']' ',' vector ')'
   73       | MVARIABLE . '(' matrix ')'
   74       | MVARIABLE .  [NEWLINE, ELEMMULT, '\'', LEFTSHIFT, RIGHTSHIFT, '*']
   91 vector: MVARIABLE . '(' expr ',' '[' ']' ')'
   92       | MVARIABLE . '(' '[' ']' ',' expr ')'
  105 vmdeclaration: MVARIABLE . '(' expr ',' expr ')' ASSIGN expr
  106              | MVARIABLE . '(' expr ',' '[' ']' ')' ASSIGN vector
  107              | MVARIABLE . '(' '[' ']' ',' expr ')' ASSIGN vector
  108              | MVARIABLE . '(' vector ',' '[' ']' ')' ASSIGN matrix
  109              | MVARIABLE . '(' '[' ']' ',' vector ')' ASSIGN matrix
  110              | MVARIABLE . '(' matrix ')' ASSIGN matrix
  116 assignment: MVARIABLE . ASSIGN matrix
  135 expr: MVARIABLE . '(' expr ',' expr ')'

    ASSIGN  сдвиг, и переход в состояние 72
    '('     сдвиг, и переход в состояние 73

    $default  вывод с использованием правила 74 (matrix)


State 10

  138 type: CINT .

    $default  вывод с использованием правила 138 (type)


State 11

  139 type: VINT .

    $default  вывод с использованием правила 139 (type)


State 12

  140 type: MINT .

    $default  вывод с использованием правила 140 (type)


State 13

  137 type: INT .

    $default  вывод с использованием правила 137 (type)


State 14

  141 type: CVINT .

    $default  вывод с использованием правила 141 (type)


State 15

  142 type: CMINT .

    $default  вывод с использованием правила 142 (type)


State 16

  143 type: BOOLEAN .

    $default  вывод с использованием правила 143 (type)


State 17

  144 type: CBOOLEAN .

    $default  вывод с использованием правила 144 (type)


State 18

  145 type: VBOOLEAN .

    $default  вывод с использованием правила 145 (type)


State 19

  146 type: MBOOLEAN .

    $default  вывод с использованием правила 146 (type)


State 20

  147 type: CVBOOLEAN .

    $default  вывод с использованием правила 147 (type)


State 21

  148 type: CMBOOLEAN .

    $default  вывод с использованием правила 148 (type)


State 22

    9 stmt: NEWLINE .

    $default  вывод с использованием правила 9 (stmt)


State 23

  117 print: PRINT . '(' expr ')'
  118      | PRINT . '(' VVARIABLE ')'
  119      | PRINT . '(' MVARIABLE ')'

    '('  сдвиг, и переход в состояние 74


State 24

   26 robotmove: . MOVE '(' expr ')'
   29 robotwall: . WALL
   30 robotexit: . ROBEX
   31 iff: IF . expr NEWLINE begif stmts endif
  120 expr: . const
  121     | . robotexit
  122     | . robotmove
  123     | . robotwall
  124     | . VARIABLE
  125     | . '-' expr
  126     | . expr '+' expr
  127     | . expr '-' expr
  128     | . expr '/' expr
  129     | . expr '<' expr
  130     | . expr '>' expr
  131     | . '!' expr
  132     | . expr CONJUNCTION expr
  133     | . '(' expr ')'
  134     | . VVARIABLE '(' expr ')'
  135     | . MVARIABLE '(' expr ',' expr ')'
  136     | . error expr
  149 const: . INTEGER
  150      | . BOOL

    error      сдвиг, и переход в состояние 75
    BOOL       сдвиг, и переход в состояние 5
    INTEGER    сдвиг, и переход в состояние 6
    VARIABLE   сдвиг, и переход в состояние 60
    VVARIABLE  сдвиг, и переход в состояние 76
    MVARIABLE  сдвиг, и переход в состояние 77
    MOVE       сдвиг, и переход в состояние 26
    ROBEX      сдвиг, и переход в состояние 29
    WALL       сдвиг, и переход в состояние 30
    '-'        сдвиг, и переход в состояние 31
    '!'        сдвиг, и переход в состояние 32
    '('        сдвиг, и переход в состояние 64

    robotmove  переход в состояние 39
    robotwall  переход в состояние 42
    robotexit  переход в состояние 43
    expr       переход в состояние 78
    const      переход в состояние 58


State 25

   40 forr: FORR . declaration DOUBLEDOT expr NEWLINE begfor stmts endfor
  111 declaration: . type VAR DECLARE expr
  112            | . type VAR DECLARE vector
  113            | . type VAR DECLARE matrix
  137 type: . INT
  138     | . CINT
  139     | . VINT
  140     | . MINT
  141     | . CVINT
  142     | . CMINT
  143     | . BOOLEAN
  144     | . CBOOLEAN
  145     | . VBOOLEAN
  146     | . MBOOLEAN
  147     | . CVBOOLEAN
  148     | . CMBOOLEAN

    CINT       сдвиг, и переход в состояние 10
    VINT       сдвиг, и переход в состояние 11
    MINT       сдвиг, и переход в состояние 12
    INT        сдвиг, и переход в состояние 13
    CVINT      сдвиг, и переход в состояние 14
    CMINT      сдвиг, и переход в состояние 15
    BOOLEAN    сдвиг, и переход в состояние 16
    CBOOLEAN   сдвиг, и переход в состояние 17
    VBOOLEAN   сдвиг, и переход в состояние 18
    MBOOLEAN   сдвиг, и переход в состояние 19
    CVBOOLEAN  сдвиг, и переход в состояние 20
    CMBOOLEAN  сдвиг, и переход в состояние 21
